--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 1999-09-01  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
+	* tknamazu/Makefile.am (CLEANFILES): Add $(bin_SCRIPTS).
+	
 	* template/NMZ.head.{en,ja}: Abolish using "format={short,long}" 
 	but use "result=ext" instead.
 	
