--- a/ChangeLog
+++ b/ChangeLog
@@ -47,6 +47,10 @@
 	
 	* tknamazu/tknamazu.xpm: Removed.
 
+1999-09-01  NOKUBI Takatsugu  <knok@daionet.gr.jp>
+
+	* src/mknmz.pl.in: exclude gfilter.pl from filters/*.pl in 
+	load_mocules() functions.
 
 1999-08-31  NOKUBI Takatsugu  <knok@daionet.gr.jp>
 
