--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1999-09-02  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
+
+	* lib/mhonarc.pl: Implement detection codes for MHonArc's index
+	files such as maillist.hml or threads.html.
+
+	
 1999-09-01  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
 	* acconfg.h: Rename several macro definiions for C program.
