src/*.[chl]: Improve efficiency of field-specified sorting.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 1999-09-02  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
+	* src/*.[chl]: Improve efficiency of field-specified sorting.
+	
 	* src/{namazu,message}.c: Change a option name: 
 	--reverse -> --ascending
 	
