--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+1999-09-04  masao@ulis.ac.jp (Masao Takaku)
+
+	* src/mknmz.pl.in: Fix syntax error in perl5.004.
+
+	* src/mknmz.pl.in: Fix flist_ptr bug (for checkpoint).
+
+
 1999-09-04  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
 	* configure.in (AM_INIT_AUTOMAKE): Change a version number to 1.9.1.
