--- a/File-MMagic/ChangeLog
+++ b/File-MMagic/ChangeLog
@@ -1,3 +1,7 @@
+1999-09-05  masao@ulis.ac.jp (Masao Takaku)
+
+	* Fixed check_binary() bug.(exclude TAB 0x09)
+
 1999-07-29  NOKUBI Takatsugu  <knok@daionet.gr.jp>
 
 	* Fixed %SPECIALS evaluation bug.
