--- a/File-MMagic/ChangeLog
+++ b/File-MMagic/ChangeLog
@@ -1,10 +1,18 @@
-1999-09-05  masao@ulis.ac.jp (Masao Takaku)
+1999-09-06  NOKUBI Takatsugu  <knok@daionet.gr.jp>
 
-	* Fixed check_binary() bug.(exclude TAB 0x09)
+	* Added excluding character TAB on check_binary() function.
+	 (Tkanks to Mr.Takaku)
+	* Added VRML magic entries. (Tkanks to Mr.Takaku)
+	
+1999-08-03  NOKUBI Takatsugu  <knok@daionet.gr.jp>
+
+	* Fixed flie close bug in checktype_filehandle().
+	 (Thanks to Mr. Alan)
 
 1999-07-29  NOKUBI Takatsugu  <knok@daionet.gr.jp>
 
 	* Fixed %SPECIALS evaluation bug.
+	* Release version 0.16.
 
 1999-07-14  NOKUBI Takatsugu  <knok@daionet.gr.jp>
 
