--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+1999-09-06  Ryuji Abe <raeva@t3.rim.or.jp>
+
+	* configure.in: Fixed incorrect warnings.
+
+	* src/Makefile.am: Removed $(bin_SCRIPTS) at CLEANFILES.
+
+	* tknamazu/Makefile.am: Likewise.
+
+
 1999-09-06  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
 	* form.c (replace_action): Replace {cgi} with suitable namazu.cgi
