--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-09-07  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
+
+	* Makefile.am (CLEANFILES): Remove lib/var.pl lib/conf.pl entries.
+	
+
 1999-09-06  Ryuji Abe <raeva@t3.rim.or.jp>
 
 	* configure.in: Fixed incorrect warnings.
