--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1999-10-12  NOKUBI Takatsugu  <knok@daionet.gr.jp>
+
+	* src/namazu.c : Moved some functions to libnamazu.c.
+
+	* src/libnamazu.{c,h}: Created new files.
+
 1999-10-11  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
 	* configure.in (AM_INIT_AUTOMAKE): Change a version number to 1.9.6.
