--- a/po/namazu.pot
+++ b/po/namazu.pot
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 1999-10-13 17:35+0900\n"
+"POT-Creation-Date: 1999-10-14 07:40+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -104,7 +104,7 @@ msgid ""
 "Search Program of Namazu v%s\n"
 "%s\n"
 "\n"
-"Usage: namazu [options] <query> [index(s)] \n"
+"Usage: namazu [options] <query> [index ...] \n"
 "    -n, --max=num        set number of documents shown at once.\n"
 "    -w, --whence=num     set first number of documents shown in results.\n"
 "    -l, --list           print results by listing format.\n"
