--- a/po/ja_JP.JIS7.po
+++ b/po/ja_JP.JIS7.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: namazu 2.0\n"
-"POT-Creation-Date: 1999-10-14 07:40+0900\n"
+"POT-Creation-Date: 1999-10-14 13:47+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
 "Last-Translator: Satoru Takabayashi <satoru-t@is.aist-nara.ac.jp>\n"
 "Language-Team: Japanese <satoru-t@is.aist-nara.ac.jp>\n"
@@ -159,7 +159,7 @@ msgstr ""
 "    -U, --no-encode-uri     URI encode \033\044\102\044\116\111\174\070\065\044\162\071\124\044\157\044\112\044\044\033\050\102\n"
 "    -o, --output=file       \033\044\102\073\130\104\152\044\067\044\077%%\125%%\041%%\044%%\153\044\113\070\041\072\167\067\153\062\114\044\162\075\120\116\117\044\071\044\153\033\050\102\n"
 "    -f, --config=file       namazu.conf \033\044\102\044\162\073\130\104\152\044\071\044\153\033\050\102\n"
-"    -C, --show-config       \033\044\102%%\063%%\163%%\125%%\043%%\056%%\145%%\154\041\074%%\067%%\147%%\163\106\142\115\106\044\162\111\075\074\050\044\071\044\153\033\050\102\n"
+"    -C, --show-config       \033\044\102\100\137\104\152\044\162\111\075\074\050\044\071\044\153\033\050\102\n"
 "    -q, --quiet             \033\044\102\070\041\072\167\067\153\062\114\060\112\063\060\044\116%%\141%%\103%%\073\041\074%%\070\044\162\111\075\074\050\044\067\044\112\044\044\033\050\102\n"
 "    -L, --lang=lang         \033\044\102%%\141%%\103%%\073\041\074%%\070\044\116\070\100\070\154\044\162\100\137\104\152\044\071\044\153\033\050\102 ja \033\044\102\044\136\044\077\044\117\033\050\102 en\n"
 "    -v, --version           \033\044\102%%\164%%\041\041\074%%\070%%\147%%\163\044\162\111\075\074\050\044\071\044\153\033\050\102\n"
