--- a/po/ja_JP.SJIS.po
+++ b/po/ja_JP.SJIS.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: namazu 2.0\n"
-"POT-Creation-Date: 1999-10-14 07:40+0900\n"
+"POT-Creation-Date: 1999-10-14 13:47+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
 "Last-Translator: Satoru Takabayashi <satoru-t@is.aist-nara.ac.jp>\n"
 "Language-Team: Japanese <satoru-t@is.aist-nara.ac.jp>\n"
@@ -159,7 +159,7 @@ msgstr ""
 "    -U, --no-encode-uri     URI encode \202\314\225\234\214\263\202\360\215\163\202\355\202\310\202\242\n"
 "    -o, --output=file       \216\167\222\350\202\265\202\275\203\164\203\100\203\103\203\213\202\311\214\237\215\365\214\213\211\312\202\360\217\157\227\315\202\267\202\351\n"
 "    -f, --config=file       namazu.conf \202\360\216\167\222\350\202\267\202\351\n"
-"    -C, --show-config       \203\122\203\223\203\164\203\102\203\115\203\205\203\214\201\133\203\126\203\207\203\223\223\340\227\145\202\360\225\134\216\246\202\267\202\351\n"
+"    -C, --show-config       \220\335\222\350\202\360\225\134\216\246\202\267\202\351\n"
 "    -q, --quiet             \214\237\215\365\214\213\211\312\210\310\212\117\202\314\203\201\203\142\203\132\201\133\203\127\202\360\225\134\216\246\202\265\202\310\202\242\n"
 "    -L, --lang=lang         \203\201\203\142\203\132\201\133\203\127\202\314\214\276\214\352\202\360\220\335\222\350\202\267\202\351 ja \202\334\202\275\202\315 en\n"
 "    -v, --version           \203\224\203\100\201\133\203\127\203\207\203\223\202\360\225\134\216\246\202\267\202\351\n"
