--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-10-22  Ryuji Abe <raeva@t3.rim.or.jp>
+
+	* src/util.h [HAVE__VSNPRINTF]: Fixed macro definition.
+
 1999-10-21  Ryuji Abe <raeva@t3.rim.or.jp>
 
 	* configure.in (LIBOBJS): vsnprintf.o was added when neither 
