--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-10-26  Rei FURUKAWA  <furukawa@tcp-ip.or.up>
+
+	* pl/nmzidx.pl, src/gcnmz.pl.in: Close unused file handles.
+
 1999-10-25  Ken-ichi Hirose <kenzo-@tama.or.jp>
 
 	* configure.in: Added --without-file-mmagic option.
