--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-10-27  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
+
+	* src/usage.c (show_mini_usage): s/more options/more information/
+
 1999-10-26  Rei FURUKAWA  <furukawa@tcp-ip.or.up>
 
 	* pl/nmzidx.pl, src/gcnmz.pl.in: Close unused file handles.
