--- a/File-MMagic/ChangeLog
+++ b/File-MMagic/ChangeLog
@@ -1,3 +1,7 @@
+1999-10-27  NOKUBI Takatsugu  <knok@daionet.gr.jp>
+
+	* Added 'AUTHOR' and 'ABSTRACT' paramaters on Makefile.PL.
+
 1999-10-05  NOKUBI Takatsugu  <knok@daionet.gr.jp>
 
 	* Added excluding character CR on check_binary() function.
