--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-10-29  NOKUBI Takatsugu  <knok@daionet.gr.jp>
+
+	* Seacrh-Namazu/*: Added new module.
+
 1999-10-28  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
 	* pl/wakati.pl (wakatize_japanese): s/Okurigana/okurigana/,
