--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-11-01  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
+
+	* configure.in (AM_INIT_AUTOMAKE): Change a version number to 1.9.7.
+
 1999-10-29  NOKUBI Takatsugu  <knok@daionet.gr.jp>
 
 	* Seacrh-Namazu/*: Added new module.
